--- a/spotsight/pom.xml
+++ b/spotsight/pom.xml
@@ -33,6 +33,21 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.walterjwhite.java.dependencies</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>0.0.17</version>
+			<type>pom</type>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.1.0-alpha1</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>5.14.2</version>
