test cases passed

--- a/spotsight/src/main/resources/application.properties
+++ b/spotsight/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=spotsight
 
-spring.config.import=classpath:env.properties
 # spotify properties
-spotify.client.id=${CLIENT_ID}
-spotify.client.secret=${CLIENT_SECRET}
-spotify.auth.url=https://accounts.spotify.com/api/token
+spotify.client-id=${CLIENT_ID}
+spotify.client-secret=${CLIENT_SECRET}
+spotify.auth-url=https://accounts.spotify.com/api/token
