--- a/spotsight/pom.xml
+++ b/spotsight/pom.xml
@@ -33,6 +33,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<version>3.6.11</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.walterjwhite.java.dependencies</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>0.0.17</version>
