--- a/spotsight/src/main/resources/application.properties
+++ b/spotsight/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.application.name=spotsight
 spotify.client-id=${CLIENT_ID}
 spotify.client-secret=${CLIENT_SECRET}
 spotify.auth-url=https://accounts.spotify.com/api/token
+spotify.redirect-uri=http://localhost:8080/login/spotify/callback
