--- a/spotsight/src/main/resources/application.properties
+++ b/spotsight/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=spotsight
 
+spring.config.import=classpath:env.properties
+
 # spotify properties
 spotify.client-id=${CLIENT_ID}
 spotify.client-secret=${CLIENT_SECRET}
